# abdm-ecdh

./: .gitignore  .jitpack.yml  README.md  abdmecdh_test.go  curve.go  decrypt.go  go.mod  jitpack.yml  utils.go
.github/workflows/: ci-go.yml  ci-java.yml  ci-python.yml  release-go.yml  release-java.yml  release-python.yml
go/: README.md  abdmecdh_test.go  curve.go  ecdh.go  encrypt.go  go.mod  keygen.go  utils.go  x509.go
java/: README.md  pom.xml
java/src/main/java/care/eka/abdmecdh/: AbdmEcdh.java  DecryptionResponse.java  EncryptionResponse.java  KeyMaterial.java
java/src/test/java/care/eka/abdmecdh/: AbdmEcdhTest.java
python/: README.md  pyproject.toml
python/src/abdm_ecdh/: __init__.py  curve.py  decrypt.py  encrypt.py  keygen.py  utils.py  x509.py
python/tests/: test_abdm_ecdh.py
