[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abdm-ecdh"
version = "1.0.0"
description = "ABDM ECDH encryption/decryption for secure health data exchange"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/eka-care/abdm-ecdh"
Repository = "https://github.com/eka-care/abdm-ecdh"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/abdm_ecdh"]
